# rayon-subslice

./: Cargo.toml
benches/: bench1.rs
src/: lib.rs  main.rs
