[package]
name = "rayon-subslice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
num = "0.4.0"

[dev-dependencies]
criterion = "0.3"
num-complex = ">= 0.4, < 0.4.2"
si-scale = "0.1.5"
conv = "0.3.3"
num-traits = "0.2.15"

[[bench]]
name = "bench1"
harness = false
html_reports = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
